<resources>
    <string name="app_name">LockAwayAdmin</string>
    <string name="done">Done</string>
    <string name="changeStatus">Status</string>
    <string name="refreshlist">Resfresh</string>
    <string name="menu_edit">Edit Menu</string>
    <string name="cutomers_admin">Customers</string>
    <string name="add_menu_object">Add Menu Object</string>
    <string name="check_item">Some Fields Are Missing</string>
    <string name="add_new_item_to_menu">Add New Item To Menu</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_description">Item Desciption</string>
    <string name="price">Price</string>
    <string name="time_to_make_in_min">Time To Make (In min.)</string>
    <string name="choos_photos">Choose Photos</string>
    <string name="send">Send</string>
    <string name="vegen">Vegen</string>
    <string name="avalibale_in_menu" >Avaliable In Menu</string>
    <string name="gloten_free">Gloten Free</string>
    <string name="on_sale">On Sale</string>
    <string name="object_saved">Object Saved</string>
    <string name="photo_uploaded">Photo uploaded</string>
    <string name="error_uploading_photo">Error uploading photo</string>
    <string name="error_uploading_photo_object">Error saving photo object</string>
    <string name="error_saving_object">Error saving object</string>
    <string name="del_object">Delete Object</string>
    <string name="edit_object">Edit Object</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted">Item Deleted!</string>
    <string name="wait_deleting_item">Please wait while deleting items from menu...</string>
    <string name="wait_refreshing_list">Please wait while refreshing the list...</string>
    <string name="time_to_make">Total Time To Make:</string>
    <string name="edit_item_lable">Edit Item</string>
    <string name="wait_saving_item">Please wait while saving item...</string>
    <string name="pick_status">Pick Status</string>
    <string name="store_status">Open/Close</string>
    <string name="want_close_store">Are you sure you want to close the store for orders?</string>
    <string name="want_open_store">Are youe sure you want to open the store to orders?</string>
    <string name="store_closed">Store is closed - Cant get orders...</string>
    <string name="close_store">Close store</string>
    <string name="open_store">Open store</string>

</resources>
