<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listView_Orders"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/insertItemCheckboxs" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/insertItemCheckboxs"
        android:layout_margin="0dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/refreshlist"
            android:id="@+id/btnRefreshList"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="25" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/menu_edit"
            android:id="@+id/btnGoToMenuEdit"
            android:layout_weight="25" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cutomers_admin"
            android:id="@+id/btnGoToCustomersArea"
            android:layout_weight="25" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/store_status"
            android:id="@+id/btnSetStoreStatus"
            android:layout_weight="25" />
    </LinearLayout>

</RelativeLayout>
